Fixed project view to stretch to the whole screen.

--- a/src/sass/single-project/gantt-container.scss
+++ b/src/sass/single-project/gantt-container.scss
@@ -3,11 +3,6 @@
   height: 100%;
   overflow-x: scroll;
 }
-.milestone-gantt-container {
-  flex: 1;
-  display: flex;
-  width: 100%;
-}
 #gantt-container {
   order: 3;
   display: flex;
